Added new views to navigate to the word details page.

--- a/ShabdkoshApp/ShabdkoshApp/Views/WordsCollection.xaml
+++ b/ShabdkoshApp/ShabdkoshApp/Views/WordsCollection.xaml
@@ -13,7 +13,8 @@
                     HasUnevenRows="true"
                     RefreshCommand="{Binding LoadWordItemsCommand}"
                     IsPullToRefreshEnabled="true"
-                    CachingStrategy="RecycleElement">       
+                    CachingStrategy="RecycleElement"
+                    ItemSelected="OnItemSelected">       
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
