--- a/ShabdkoshApp/Playground/Playground/App.xaml
+++ b/ShabdkoshApp/Playground/Playground/App.xaml
@@ -7,5 +7,20 @@
              x:Class="Playground.App">
     <Application.Resources>
 
+        <Thickness x:Key="PageMargin">20</Thickness>
+
+        <Color x:Key="AppBackgroundColor">AliceBlue</Color>
+        <Color x:Key="NavigationBarColor">#1976D2</Color>
+        <Color x:Key="NavigationBarTextColor">White</Color>
+
+        <Style TargetType="{x:Type NavigationPage}">
+            <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationBarColor}"/>
+            <Setter Property="BarTextColor" Value="{StaticResource NavigationBarTextColor}"/>
+        </Style>
+
+        <Style TargetType="{x:Type ContentPage}" ApplyToDerivedTypes="True">
+            <Setter Property="BackgroundColor"
+                    Value="{StaticResource AppBackgroundColor}"></Setter>
+        </Style>
     </Application.Resources>
 </Application>
