--- a/ShabdkoshApp/Playground/Playground/NoteEntryPage.xaml
+++ b/ShabdkoshApp/Playground/Playground/NoteEntryPage.xaml
@@ -6,7 +6,24 @@
              mc:Ignorable="d"
              x:Class="Playground.NoteEntryPage"
              Title="Note Entry">
-    <StackLayout Margin="20">
+    <ContentPage.Resources>
+        <Style TargetType="{x:Type Editor}">
+            <Setter Property="BackgroundColor"
+                    Value="{StaticResource AppBackgroundColor}"/>
+        </Style>
+
+        <Style TargetType="Button"
+               ApplyToDerivedTypes="True"
+               CanCascade="True">
+            <Setter Property="FontSize" Value="Medium"/>
+            <Setter Property="BackgroundColor" Value="#1976D2"/>
+            <Setter Property="TextColor" Value="White"/>
+            <Setter Property="CornerRadius" Value="5"/>
+        </Style>
+    </ContentPage.Resources>
+       
+    
+    <StackLayout Margin="{StaticResource PageMargin}">
         <Editor Placeholder="Enter your note"
                     Text="{Binding Text}"
                     HeightRequest="100"></Editor>
