--- a/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0/Views/ItemDetailPage.xaml
+++ b/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0/Views/ItemDetailPage.xaml
@@ -8,10 +8,10 @@
              Title="{Binding Title}">
 
     <StackLayout Spacing="20" Padding="15">
-        <Label Text="Text:" FontSize="Medium" />
-        <Label Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small"/>
+        <Label Text="Word:" FontSize="Medium" />
+        <Label Text="{Binding Item.Text}" d:Text="Enter the word" FontSize="Small"/>
         <Label Text="Description:" FontSize="Medium" />
-        <Label Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small"/>
+        <Label Text="{Binding Item.Description}" d:Text="Enter the description" FontSize="Small"/>
     </StackLayout>
     
 </ContentPage>
