--- a/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0/Views/NewItemPage.xaml
+++ b/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0/Views/NewItemPage.xaml
@@ -5,7 +5,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              x:Class="ShabdkoshApp1._0.Views.NewItemPage"
-             Title="New Item">
+             Title="New Word">
     
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="Cancel" Clicked="Cancel_Clicked" />
@@ -14,10 +14,10 @@
     
     <ContentPage.Content>
         <StackLayout Spacing="20" Padding="15">
-            <Label Text="Text" FontSize="Medium" />
-            <Entry Text="{Binding Item.Text}" d:Text="Item name" FontSize="Small" />
+            <Label Text="Word" FontSize="Medium" />
+            <Entry Text="{Binding Item.Text}" d:Text="Word" FontSize="Small" />
             <Label Text="Description" FontSize="Medium" />
-            <Editor Text="{Binding Item.Description}" d:Text="Item description" FontSize="Small" Margin="0" />
+            <Editor Text="{Binding Item.Description}" d:Text="Word's description" FontSize="Small" Margin="0" />
         </StackLayout>
     </ContentPage.Content>
     
