--- a/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0/Views/ItemsPage.xaml
+++ b/ShabdkoshApp/ShabdkoshApp1.0/ShabdkoshApp1.0/Views/ItemsPage.xaml
@@ -40,7 +40,9 @@
                                 d:Text="{Binding .}"
                                 LineBreakMode="NoWrap" 
                                 Style="{DynamicResource ListItemTextStyle}" 
-                                FontSize="18"  />
+                                FontSize="18" 
+                                FontAttributes="Bold"/>
+                            
                             <Label Text="{Binding Description}" 
                                 d:Text="Item descripton"
                                 LineBreakMode="NoWrap"
